// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<div
  class="Toggle"
  data-test-id="cf-ui-toggle-button"
>
  <button
    aria-pressed="false"
    class="Toggle__button"
    data-test-id="button"
    type="button"
  >
    <span
      class="emotion-0 Toggle__button__inner-wrapper"
      tabindex="-1"
    >
      <span
        class="Toggle__content-wrapper"
      >
        Toggle
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component active 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<div
  class="Toggle my-extra-class Toggle--active"
  data-test-id="cf-ui-toggle-button"
>
  <button
    aria-pressed="true"
    class="Toggle__button"
    data-test-id="button"
    type="button"
  >
    <span
      class="emotion-0 Toggle__button__inner-wrapper"
      tabindex="-1"
    >
      <span
        class="Toggle__content-wrapper"
      >
        Toggle
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<div
  class="Toggle my-extra-class"
  data-test-id="cf-ui-toggle-button"
>
  <button
    aria-pressed="false"
    class="Toggle__button"
    data-test-id="button"
    type="button"
  >
    <span
      class="emotion-0 Toggle__button__inner-wrapper"
      tabindex="-1"
    >
      <span
        class="Toggle__content-wrapper"
      >
        Toggle
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component with icon 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<div
  class="Toggle my-extra-class"
  data-test-id="cf-ui-toggle-button"
>
  <button
    aria-pressed="false"
    class="Toggle__button"
    data-test-id="button"
    type="button"
  >
    <span
      class="emotion-0 Toggle__button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary Toggle__button__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M8 16h8v2H8zM8 12h8v2H8z"
        />
        <path
          d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
        />
      </svg>
      <span
        class="Toggle__content-wrapper"
      >
        Toggle
      </span>
    </span>
  </button>
</div>
`;
